// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
  disabled={false}
>
  <input
    checked={true}
    className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
    id={null}
    name={null}
    onBlur={null}
    onChange={null}
    onFocus={null}
    type="radio"
    value={null}
  />
  <label
    className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
    fontSize="0.876em"
    fontWeight={400}
    htmlFor={null}
    letterSpacing="0px"
  >
    Radio
  </label>
</div>
`;

exports[` 2`] = `
Array [
  <div
    className="Bar__BarLayout-sc-1c4axau-2 hVthby"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-sc-1c4axau-1 fSaTM"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check fa-w-16 fa-2x Icon__StyledIcon-sc-1oa9m1v-1 OvdFF"
        color="success80"
        data-icon="check"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-sc-1c4axau-1 jISerZ"
    >
      <div
        className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
        disabled={false}
      >
        <input
          checked={null}
          className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
          id={null}
          name={null}
          onBlur={null}
          onChange={null}
          onFocus={null}
          type="radio"
          value={null}
        />
        <label
          className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
          fontSize="0.876em"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="0px"
        >
          Brief Label
        </label>
      </div>
    </div>
  </div>,
  <div
    className="Bar__BarLayout-sc-1c4axau-2 hVthby"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-sc-1c4axau-1 fSaTM"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 fa-2x Icon__StyledIcon-sc-1oa9m1v-1 fyNWBU"
        color="alert80"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-sc-1c4axau-1 jISerZ"
    >
      <div
        className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
        disabled={false}
      >
        <input
          checked={null}
          className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
          id={null}
          name={null}
          onBlur={null}
          onChange={null}
          onFocus={null}
          type="radio"
          value={null}
        />
        <label
          className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
          fontSize="0.876em"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="0px"
        >
          Radio with a long label because you cannot be concise with your words.
        </label>
      </div>
    </div>
  </div>,
]
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fGkTyc"
  id={null}
  rows={null}
>
  <div
    className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
    disabled={false}
  >
    <input
      checked={true}
      className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
      id={null}
      name={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="radio"
      value={null}
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Selected
    </label>
  </div>
  <div
    className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
    disabled={false}
  >
    <input
      checked={null}
      className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
      id={null}
      name={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="radio"
      value={null}
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Unselected
    </label>
  </div>
  <div
    className="Radio__RadioContainer-sc-3ox61a-1 ggSJSH"
    disabled={true}
  >
    <input
      checked={null}
      className="Radio__RadioInput-sc-3ox61a-2 fEqiTX"
      id={null}
      name={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      tabIndex="-1"
      type="radio"
      value={null}
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Disabled
    </label>
  </div>
</section>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fGkTyc"
  id={null}
  rows={null}
>
  <div
    className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
    disabled={false}
  >
    <input
      checked={null}
      className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
      id={null}
      name={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="radio"
      value={null}
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Left Aligned
    </label>
  </div>
  <div
    className="Radio__RadioContainer-sc-3ox61a-1 jsJuiD"
    disabled={false}
  >
    <input
      checked={null}
      className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
      id={null}
      name={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="radio"
      value={null}
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Right Aligned
    </label>
  </div>
</section>
`;

exports[` 5`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fGkTyc"
  id={null}
  rows={null}
>
  <form
    action={null}
    className="Form__FormWrapper-v2wrel-0 geeIqY"
    method={null}
    onSubmit={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eVqRaz Form__FormInputs-v2wrel-3 bZGKXs"
      id={null}
      rows={null}
    >
      <section
        className="Form__FormSection-v2wrel-2 kbyyVh"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 gfzBkI"
          fontSize="1.05em"
          fontWeight={600}
          letterSpacing="0px"
        >
          Radio Group (2 Columns)
        </h6>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 eTxJUf Radio__RadioWrapper-sc-3ox61a-0 kzzMRw"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 iPJgzA Radio__InputGroup-sc-3ox61a-3 dyYMNc"
            id={null}
            rows={null}
          >
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-1"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="1"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-1"
                letterSpacing="0px"
              >
                Radio 1
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-2"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="2"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-2"
                letterSpacing="0px"
              >
                Radio 2
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-3"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="3"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-3"
                letterSpacing="0px"
              >
                Radio 3
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-4"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="4"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-4"
                letterSpacing="0px"
              >
                Radio 4
              </label>
            </div>
          </section>
        </section>
      </section>
    </section>
  </form>
</section>
`;
